[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "trio-future"
version = "0.1.1"
description = "Capture the return values of concurrently executed trio functions"
authors = ["Dan Frank"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/danielhfrank/trio-future"
repository = "https://github.com/danielhfrank/trio-future"


[tool.poetry.dependencies]
python = "^3.7"
trio = ">=0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = ">=0.790"
flake8 = "^3.8.4"
pytest-trio = ">=0.7.0"
sphinx = "^3.4"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
